--- a/src/Main/styles/Header/Logo/logo.css
+++ b/src/Main/styles/Header/Logo/logo.css
@@ -1,4 +1,11 @@
 .logo {
-  padding-top: 40px; }
+  width: 293px;
+  height: 190px;
+  margin-top: 15px;
+  float: left; }
   .logo a {
-    cursor: pointer; }
+    cursor: pointer;
+   }
+  .logo a img{
+    margin-top: 19px;
+  }
